# byteit-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USER_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
.github/: CODEOWNERS  copilot-instructions.md
.github/skills/sdk-release-readiness/: SKILL.md
.github/workflows/: cd.yml  ci.yml  lint.yml  publish-pypi.yml  pytest-unit.yml  rebase-feature-from-sprint.caller.yml  release-check.yml  review-guard.yml
byteit/: ByteITClient.py  __init__.py  api_client.py  exceptions.py  models.py  progress.py  validation.py  validations.py
byteit/connectors/: ByteITStorageOutputConnector.py  LocalFileInputConnector.py  LocalFileOutputConnector.py  LocalInputConnector.py  LocalOutputConnector.py  README.md  S3InputConnector.py  S3OutputConnector.py  __init__.py  base.py  input_connectors.py  output_connectors.py
byteit/models/: CustomJob.py  CustomJobList.py  DocumentMetadata.py  DocumentType.py  ExtractJob.py  ExtractJobList.py  ExtractionSchema.py  ExtractionType.py  Job.py  JobList.py  JobStatus.py  OutputFormat.py  ParseJob.py  ProcessingOptions.py  SavedSchema.py  SavedSchemaList.py  __init__.py
docs/: api-curl-typescript-examples.md
examples/: README.md  basic_usage.py  batch_processing.py  batch_processing_example.py  connector_usage.py  local_file_processing.py  s3_example.py  simple_playground_file.py
rate_limit_test/: run_batch_async_test.py
scripts/: release_preflight.py
tests/: test_client.py  test_connectors.py  test_exceptions.py  test_integration.py  test_models.py  test_package_init.py  test_progress.py
