[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byteit"
version = "1.0.0"
description = "AI-powered document intelligence platform - Turn your data into structured data with a single line of code."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "ByteIT GmbH", email = "support@byteit.ai"}
]
keywords = [
    "document-processing",
    "ai",
    "document-intelligence",
    "pdf",
    "data-extraction",
    "machine-learning",
    "ocr"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]

dependencies = [
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://byteit.ai"
Repository = "https://github.com/byteit-ai/byteit-api"
Pricing = "https://byteit.ai/pricing"
Support = "https://byteit.ai/support"
Contact = "https://byteit.ai/contact"

[tool.setuptools]
packages = ["byteit", "byteit.connectors", "byteit.models"]
include-package-data = true

[tool.setuptools.package-data]
byteit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: integration tests that require API credentials",
]
addopts = "-v --tb=short"